--- a/ESHub/Info.plist
+++ b/ESHub/Info.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>ja</string>
 	</array>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-3940256099942544~1458002511</string>
+	<key>SKAdNetworkIdentifier</key>
+	<string>cstr6suwn9.skadnetwork</string>
 </dict>
 </plist>
